--- a/free-nodes/2024-11-18-free-high-speed-nodes.htm
+++ b/free-nodes/2024-11-18-free-high-speed-nodes.htm
@@ -126,16 +126,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-4-free-node-subscribe-links.htm" title="「11月4日」最高速度18.9M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「11月4日」最高速度18.9M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-high-speed-nodes.htm" title="「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月16日」最高速度20M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-v2ray-subscribe.htm" title="「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-30-free-v2ray-subscribe.htm" title="「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「9月30日」最高速度22.3M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-v2ray.htm" title="「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-20-free-v2ray-subscribe.htm" title="「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「9月20日」最高速度18.8M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-23-node-share-links.htm" title="「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「9月23日」最高速度18.3M/S，2024年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-23-free-high-speed-nodes.htm" title="「11月23日」最高速度22.1M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「11月23日」最高速度22.1M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-18-free-high-speed-nodes.htm" title="「9月18日」最高速度21.8M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月18日」最高速度21.8M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-free-v2ray-subscribe.htm" title="「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月21日」最高速度20.3M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-25-free-subscribe-node.htm" title="「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「11月25日」最高速度20.6M/S，2024年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-10-node-share.htm" title="「10月10日」最高速度22.8M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「10月10日」最高速度22.8M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-16-node-share-links.htm" title="「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-19-node-share.htm" title="「10月19日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「10月19日」最高速度18.7M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-31-node-share.htm" title="「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「10月31日」最高速度20.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-8-node-share.htm" title="「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「9月8日」最高速度21.2M/S，2024年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -147,7 +147,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
